<resources>
    <string name="app_name">Converter</string>
    <string name="title_activity_currency_settings">CurrencySettings</string>
    <string name="enter_value">Enter your value here</string>
    <string name="aud">AUD</string>
    <string name="result">Result will appear here!</string>
    <string name="choose_a_currency">Choose a currency!</string>
    <string name="change_currency">Change Currency</string>
    <string name="home">Home</string>
    <string name="reset">Reset</string>
    <string name="pick_a_currency_below">Select a currency</string>
    <string name="us_dollar">US DOLLAR</string>
    <string name="thai_baht">Thai Baht</string>
    <string name="new_zealand_dollar">New Zealand Dollar</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="euro">EURO</string>
    <string name="singapore_dollar">Singapore Dollar</string>
    <string name="indonesian_rupiah">Indonesian Rupiah</string>
    <string name="canadian_dollar">Canadian Dollar</string>
    <string name="pound_sterling">Pound sterling</string>
    <string name="united_arab_emirates_dirham">United Arab Emirates Dirham</string>
    <string name="indian_rupee">Indian Rupee</string>
    <string name="hong_kong_dollar">Hong Kong Dollar</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome to the\n Currency Converter\n \n This app only converts Australian Dollar to various Currencies</string>
    <string name="start">Start Conversion</string>
    <string name="resulting_figures">Resulting Figures</string>
    <string name="whole_number">Whole Number</string>
    <string name="_2_decimal_places">2 Decimal Places</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="back">Back</string>
    <string name="conversion_rates">Conversion Rates</string>
    <string name="date_and_time">Conversion Rates are based on \n Date : 30/3/2020 \n Time: 1pm\n\n1 AUD equals to:</string>
    <string name="aud_equals">1 AUD equals to:</string>
    <string name="rates">• 0.61 USD\n• 0.5 Pound Sterling\n• 0.86 Canadian Dollar\n• 19.86 Thai Baht\n• 1.02 New Zealand Dollar\n• 65.91 Japanese Yen\n• 0.55 Euro\n• 2.26 United Arab Emirates Dirham\n• 0.88 Singapore Dollar\n• 10036.34 Indonesian Rupiah\n• 46.37 Indian Rupee\n• 4.76 Hong Kong Dollar</string>
</resources>

