<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="8"
    tools:context=".ConversionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/enter_value"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currencyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aud"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/convertedCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/result"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/convertedCurrencyType"
                android:layout_width="99dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:text="@string/choose_a_currency"
                android:textSize="20sp" />

            <Button
                android:id="@+id/currencyButton"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:onClick="onButtonPress"
                android:text="@string/change_currency" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onButtonPress"
            android:text="@string/home"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onButtonPress"
            android:text="@string/settings"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onButtonPress"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
