<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConversionRatesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/date_and_time"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/rates"
        android:textAlignment="gravity"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="homeClicked"
        android:text="@string/home" />
</androidx.appcompat.widget.LinearLayoutCompat>